# home_ai

./: .env.example  .gitignore  README.md  pyproject.toml
src/home_ai/: main.py
src/home_ai/api/: __init__.py  commands.py  webhook.py
src/home_ai/cameras/: __init__.py  camera.py  manager.py  rtsp_camera.py
src/home_ai/config/: logging.py  settings.py
src/home_ai/notifications/: __init__.py  notifier.py  telegram.py
src/home_ai/orchestration/: __init__.py  system.py
src/home_ai/recording/: __init__.py  policies.py  recorder.py
src/home_ai/vision/: __init__.py  detector.py  models.py  yolo_worker.py
