[project]
name = "home-ai"
version = "0.1.0"
description = "Multi-camera security system with YOLO detection, recording and Telegram alerts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ultralytics>=8.0.0",
  "opencv-python>=4.8.0",
  "numpy>=1.24",
  "requests>=2.31",
  "flask>=3.0",
  "pydantic>=2.5",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
home-ai = "home_ai.main:main"